# django-birdbath

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: nightly.yml  test.yml
birdbath/: __init__.py  apps.py  models.py  settings.py  system_checks.py
birdbath/checks/: __init__.py  base.py
birdbath/checks/contrib/: heroku.py
birdbath/management/commands/: run_birdbath.py
birdbath/migrations/: 0001_initial.py
birdbath/processors/: __init__.py  base.py  users.py
birdbath/processors/contrib/: wagtail.py
tests/: settings.py  test_management_commands.py  test_processors.py  test_system_checks.py  test_wagtail_processors.py
