[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-birdbath"
authors = [{name = "Torchbox", email = "info@torchbox.com"}]
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["django", "anonymization", "data cleaning"]
dependencies = [
    "Faker>=8",
    "Django>=4.2",
]
requires-python = ">=3.9"

[project.urls]
Home = "https://github.com/torchbox/django-birdbath"

[project.optional-dependencies]
dev = [
    "django>=4.2",
    "pre-commit>=3.8.0",
    "pytest~=8.3",
    "pytest-django~=4.9",
    "ruff==0.6.9",
    "wagtail>=5.2",
]

[tool.flit.module]
name = "birdbath"

[tool.flit.sdist]
include = ["LICENSE", "CHANGELOG.md", "README.md"]

[tool.ruff]
target-version = "py313"

exclude = [
    ".github",
]

# E501: Line too long
lint.ignore = ["E501"]

lint.select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "T20", # flake8-print
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.pytest.ini_options]
django_find_project = false
pythonpath = "."
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = [
    "tests",
]
