[metadata]
name = django-birdbath
version = 1.0.0
long-description = file: README.md
long-description-content-type = text/markdown
author = Torchbox
author_email = info@torchbox.com
url = https://git.torchbox.com/internal/django-birdbath

[options]
packages = find:
include_package_data = true
install_requires =
    Faker >=8,<14
python_requires = >=3.6

[options.extras_require]
dev =
    black==23.1.0
    flake8==6.0.0
    isort==5.12.0
