[metadata]
name = django-birdbath
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Torchbox
author_email = info@torchbox.com
url = https://git.torchbox.com/internal/django-birdbath

[options]
packages = find:
include_package_data = true
install_requires =
    Faker >=8,<14
python_requires = >=3.6

[options.extras_require]
dev =
    black==23.1.0
    flake8==6.0.0
    isort==5.12.0

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[isort]
known_first_party=birdbath
known_django=django
skip=migrations,node_modules,venv,.git,__pycache__
sections=STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section=THIRDPARTY
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
profile=black
